# liziqun

./: .flake8  .gitignore  AGENTS.md  ARIS_PAPER_STATUS.md  CLAIMS_FROM_RESULTS.md  CLAUDE.md  EXPERIMENT_LOG.md  NARRATIVE_REPORT.md  PAPER_PLAN.md  README.md  project_analysis_report.md  pyproject.toml  requirements.txt  毕设进度汇报大纲.md
TongjiThesis-1.4.0/: main.tex  math_commands.tex
TongjiThesis-1.4.0/bib/: note.bib
TongjiThesis-1.4.0/chapters/: 02_intro.tex  03_theory.tex  04_model.tex  05_algorithm.tex  06_experiments.tex  07_conclusion.tex  metadata.tex
TongjiThesis-1.4.0/style/: tongjithesis.cls
TongjiThesis-1.4.3/: main.tex
TongjiThesis-1.4.3/bib/: note.bib
TongjiThesis-1.4.3/chapters/: 00_abstract.tex  02_intro.tex  03_theory.tex  04_model.tex  05_algorithm.tex  06_experiments.tex  07_conclusion.tex  ack.tex  appendix.tex  (+1 more)
docs/: LOCAL_TOOLING.md  PARETO_SOLUTIONS.md  PROJECT_SYSTEM_EXPLANATION.md  THESIS_EVIDENCE_MAP.md  THESIS_FINALIZATION_GUIDE.md  THESIS_MIGRATION_RULES.md  TONGJI_TEMPLATE_HANDOFF.md  decomposition_guide.md  mopso_manual.md  工作汇报.md  工作简报.md
examples/: demo_decomposition.py
experiments/: 200km_g2g_three_configs.py  200km_optimized_final.py  ablation_core.py  batch_three_configs.py  boundary_analysis.py  compare_algorithms.py  compare_optimization.py  experiment_challenging.py  experiment_comprehensive.py  experiment_comprehensive_fast.py  experiment_paper_aligned.py  jcr_param_sweep.py  large_scale_1000km_100radars.py  quick_compare.py  tune_mopso.py
figures/: generate_simulation_figures.py  tune_results.json  visualize_coordinate_transform.py  visualize_decomposition.py
paper/: main.tex  references.bib
paper-new/: main.tex  math_commands.tex  references.bib
reports/: EXPERIMENT_AUDIT.json  EXPERIMENT_AUDIT.md  README.md  VALIDATION_RUN_SUMMARY.md
results/: README.md  ablation_normalization.npz  ablation_propagation.npz  ablation_radar_count.npz  ablation_region.npz  ablation_summary.json  ablation_transform.npz  algorithm_comparison.json  boundary_analysis.json  challenging_scene_results.json  paper_aligned_results.json  tune_results.json
src/: baseline_algorithms.py  benchmarks.py  coordinate_transform.py  cupy_gpu_fix.py  decomposition.py  evaluation.py  exceptions.py  experiment_runner.py  grid_evaluator.py  hybrid_mopso.py  logger.py  metrics.py  mopso.py  optimization_utils.py  pareto_visualization.py  pso_basic.py  region_visualizer.py
tests/: test_baseline_algorithms.py  test_experiment_protocol.py  test_gpu.py  test_metrics.py  test_mopso.py  test_mopso_pytest.py  test_performance.py  test_visualize.py
tools/: check_pdf.ps1  fix_pdf_figures.py  generate_chinese_diagram_figures.py  generate_chinese_process_figures.py  generate_comparison_figures.py  generate_defense_ppt.py  generate_pipeline_figure.py  generate_tables.py  localize_tradeoff_fixed.py  remove_images.py  run_4h_thesis_autorun.ps1  summarize_ablation_results.py  sync_results.ps1
(+24 files in other folders)
