[project]
name = "radar-deployment-optimization"
version = "1.0.0"
description = "多功能雷达网络部署优化 - MOPSO-DT算法"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "云发鹏"},
]
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "shapely>=2.0.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "numba>=0.58.0,<1.0.0",
    "scipy>=1.10.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
